@@ -1,5 +1,11 @@
 2012-03-06  Helmut Eller  <heller@common-lisp.net>
 
+	Fix SBCL backend for Windows.
+
+	* swank-sbcl.lisp (fd-stream-input-buffer-empty-p): Restore it.
+
+2012-03-06  Helmut Eller  <heller@common-lisp.net>
+
 	* swank.lisp (swank-require): Ensure that provide as called.
 
 2012-02-12  Stas Boukarev  <stassats@gmail.com>
